tests/rosetta/out/Smalltalk/aliquot-sequence-classifications.out
/tmp/aliquot-sequence-classifications.st:6: parse error, expected ']'
